deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dsi-prod
  labels:
    app.kubernetes.io/name: dsi
    app.kubernetes.io/component: namespace
    environment: production
